sidebar: fix z-index of above/below indicators

--- a/client/Main/styl/resurrection.sidebar.styl
+++ b/client/Main/styl/resurrection.sidebar.styl
@@ -70,6 +70,7 @@ sidebarTextShadow()
     &.above
       rounded         0 0 3px 3px
       abs             0px 0 0 10px
+      z-index         10
       &:after
         border-bottom-color white
         abs           3px 0 0 8px
